# SAE-Probes

./: .gitignore  README.md  ai_vs_humanmade_plot.py  generate_model_and_sae_multi_token_acts.py  generate_sae_activations.py  handle_sae_bench_saes.py  k_vs_auc_plot.py  plot_combined.ipynb  plot_llama.ipynb  plot_multi_token.py  plot_normal.ipynb  plot_ood.ipynb  pyproject.toml  run_baselines.py  run_multi_token_acts.py  sae_improvement.ipynb  train_sae_probes.py  utils_data.py  utils_sae.py  utils_training.py
dataset_investigations/: aimade_investigation.ipynb  gluecola_investigate.ipynb
sae_probes/: __init__.py  activations.py  combine_results.py  constants.py  datasets.py  evaluation.py  generate_model_activations.py  generate_sae_activations.py  probing.py  run.py  run_baselines.py  run_multi_token_acts.py  run_sae_evals.py  train_sae_probes.py  utils.py  utils_data.py  utils_sae.py  utils_training.py
tests/: helpers.py  test_activations.py  test_combine_results.py  test_datasets.py  test_generate_model_activations.py  test_generate_sae_activations.py  test_probing.py  test_run.py  test_run_baselines.py  test_run_multi_token_acts.py  test_run_sae_evals.py  test_train_sae_probes.py  test_utils_data.py  test_utils_sae.py  test_utils_training.py
tests/_comparison/: ai_vs_humanmade_plot.py  combine_results.py  generate_model_activations.py  generate_model_and_sae_multi_token_acts.py  generate_sae_activations.py  run_baselines.py  run_multi_token_acts.py  utils_data.py  utils_sae.py  utils_training.py
